--- a/AwsSampleStack.template
+++ b/AwsSampleStack.template
@@ -26,7 +26,7 @@
         "SubnetA" : {
             "Type" : "AWS::EC2::Subnet",
             "Properties" : {
-                "AvailabilityZone" : "eu-west-1a",
+                "AvailabilityZone" : "ap-southeast-2a",
                 "VpcId" : { "Ref" : "SampleStackVpc" },
                 "CidrBlock" : "10.0.0.0/24"
             }
@@ -34,7 +34,7 @@
         "SubnetB" : {
             "Type" : "AWS::EC2::Subnet",
             "Properties" : {
-                "AvailabilityZone" : "eu-west-1b",
+                "AvailabilityZone" : "ap-southeast-2b",
                 "VpcId" : { "Ref" : "SampleStackVpc" },
                 "CidrBlock" : "10.0.1.0/24"
             }
@@ -208,7 +208,8 @@
                 "VpcId" : { "Ref" : "SampleStackVpc" },
                 "GroupDescription" : "Web Security Group",
                 "SecurityGroupIngress" : [
-                    {"IpProtocol" : "tcp", "FromPort" : "8080", "ToPort" : "8080", "CidrIp" : "0.0.0.0/0"}
+                    {"IpProtocol" : "tcp", "FromPort" : "8080", "ToPort" : "8080", "CidrIp" : "0.0.0.0/0"},
+                    {"IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "CidrIp" : "0.0.0.0/0"}
                 ]
             }
         },
@@ -235,9 +236,9 @@
                 "IamInstanceProfile": {
                     "Ref": "ApplicationInstanceProfile"
                 },
-                "ImageId": "ami-6e7bd919",
+                "ImageId": "ami-dc361ebf",
                 "InstanceType": "t2.micro",
-                "KeyName": "eu-west-1",
+                "KeyName": "peter-aws",
                 "NetworkInterfaces" : [ {
                    "AssociatePublicIpAddress" : true,
                    "DeviceIndex" : "0",
@@ -247,25 +248,13 @@
                 "UserData"       : { "Fn::Base64" : { "Fn::Join" : ["", [
                     "#!/bin/bash\n",
                     "cd /home/ec2-user\n",
-                    "wget https://s3.amazonaws.com/repo.elasticspring.org/org/springframework/cloud/aws/sample/spring-cloud-aws-reference-app/1.0.0-BUILD/spring-cloud-aws-reference-app-1.0.0-BUILD.war -O application.jar","\n",
-                    "printf 'cloud.aws.region.auto\ncloud.aws.credentials.instanceProfile\ncloud.aws.stack.auto\ncloud.aws.rds.RdsInstance.password=",
+                    "wget https://s3-ap-southeast-2.amazonaws.com/static-website-peterc-00001/spring-cloud-aws-reference-app-1.0.0-BUILD.war -O application.jar","\n",
+                    "printf 'cloud.aws.region.auto\ncloud.aws.credentials.instanceProfile\ncloud.aws.stack.auto=true\ncloud.aws.rds.RdsInstance\ncloud.aws.rds.RdsInstance.password=",
                     { "Ref": "RdsPassword" },
                     "' > application.properties\n",
                     "nohup java -jar application.jar --spring.config.location=/home/ec2-user/application.properties > application.log & \n",
                     "\n"
                 ]]}}
-            }
-        },
-        "Route53Domain": {
-            "Type": "AWS::Route53::RecordSet",
-            "Properties": {
-                "HostedZoneName": "elasticspring.org.",
-                "Name": "refapp.elasticspring.org.",
-                "Type": "A",
-                "TTL" : "300",
-                "ResourceRecords" : [
-                    { "Fn::GetAtt" : [ "SpringBootServer", "PublicIp" ] }
-                ]
             }
         },
         "SnsTopic": {
